Update: Kotlin Gems API documentation

--- a/navigation.html
+++ b/navigation.html
@@ -50,10 +50,13 @@
     <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-3" pageId="Kotlin Gems Docs::text//get/kotlin.String#kotlin.collections.Iterable[kotlin.Int]/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/get.html"><span><span>get()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-4" pageId="Kotlin Gems Docs::text//swapcase/kotlin.String#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-4" pageId="Kotlin Gems Docs::text//insert/kotlin.String#kotlin.Int#kotlin.String/PointingToDeclaration//769193423">
+      <div class="overview"><a href="-kotlin -gems -docs/text/insert.html"><span><span>insert()</span></span></a></div>
+    </div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-5" pageId="Kotlin Gems Docs::text//swapcase/kotlin.String#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/swapcase.html"><span><span>swapcase()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-5" pageId="Kotlin Gems Docs::text//times/kotlin.String#kotlin.Int/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-6" pageId="Kotlin Gems Docs::text//times/kotlin.String#kotlin.Int/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/times.html"><span><span>times()</span></span></a></div>
     </div>
   </div>
