Update: Kotlin Gems API documentation

--- a/navigation.html
+++ b/navigation.html
@@ -1,62 +1,80 @@
 <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu" pageId="Kotlin Gems Docs::////PointingToDeclaration//769193423">
   <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="index.html"><span><span>Kotlin</span></span> <span><span>Gems</span></span> <span><span>Docs</span></span></a></div>
-  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0" pageId="Kotlin Gems Docs::number////PointingToDeclaration//769193423">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/number/index.html"><span><span>number</span></span></a></div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-0" pageId="Kotlin Gems Docs::number//compareTo/kotlin.Number#kotlin.Int/PointingToDeclaration//769193423">
+  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0" pageId="Kotlin Gems Docs::collection////PointingToDeclaration//769193423">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-0&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/collection/index.html"><span><span>collection</span></span></a></div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-0" pageId="Kotlin Gems Docs::collection//combination/kotlin.collections.List[TypeParam(bounds=[kotlin.Any?])]#kotlin.Int/PointingToDeclaration//769193423">
+      <div class="overview"><a href="-kotlin -gems -docs/collection/combination.html"><span><span>combination()</span></span></a></div>
+    </div>
+  </div>
+  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1" pageId="Kotlin Gems Docs::io////PointingToDeclaration//769193423">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-1&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/io/index.html"><span><span>io</span></span></a></div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1-0" pageId="Kotlin Gems Docs::io//gets/#/PointingToDeclaration//769193423">
+      <div class="overview"><a href="-kotlin -gems -docs/io/gets.html"><span><span>gets()</span></span></a></div>
+    </div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1-1" pageId="Kotlin Gems Docs::io//puts/#kotlin.Any?/PointingToDeclaration//769193423">
+      <div class="overview"><a href="-kotlin -gems -docs/io/puts.html"><span><span>puts()</span></span></a></div>
+    </div>
+  </div>
+  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2" pageId="Kotlin Gems Docs::number////PointingToDeclaration//769193423">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-2&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/number/index.html"><span><span>number</span></span></a></div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-0" pageId="Kotlin Gems Docs::number//compareTo/kotlin.Number#kotlin.Int/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/compare-to.html"><span>compare</span><wbr></wbr><span><span>To()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-1" pageId="Kotlin Gems Docs::number//isEven/kotlin.Int#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-1" pageId="Kotlin Gems Docs::number//isEven/kotlin.Int#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-even.html"><span>is</span><wbr></wbr><span><span>Even()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-2" pageId="Kotlin Gems Docs::number//isNegative/kotlin.Number#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-2" pageId="Kotlin Gems Docs::number//isInteger/kotlin.Number#/PointingToDeclaration//769193423">
+      <div class="overview"><a href="-kotlin -gems -docs/number/is-integer.html"><span>is</span><wbr></wbr><span><span>Integer()</span></span></a></div>
+    </div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-3" pageId="Kotlin Gems Docs::number//isNegative/kotlin.Number#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-negative.html"><span>is</span><wbr></wbr><span><span>Negative()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-3" pageId="Kotlin Gems Docs::number//isOdd/kotlin.Int#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-4" pageId="Kotlin Gems Docs::number//isOdd/kotlin.Int#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-odd.html"><span>is</span><wbr></wbr><span><span>Odd()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-4" pageId="Kotlin Gems Docs::number//isPositive/kotlin.Number#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-5" pageId="Kotlin Gems Docs::number//isPositive/kotlin.Number#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-positive.html"><span>is</span><wbr></wbr><span><span>Positive()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-5" pageId="Kotlin Gems Docs::number//isPrime/kotlin.Int#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-6" pageId="Kotlin Gems Docs::number//isPrime/kotlin.Int#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-prime.html"><span>is</span><wbr></wbr><span><span>Prime()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-6" pageId="Kotlin Gems Docs::number//isZero/kotlin.Number#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-7" pageId="Kotlin Gems Docs::number//isZero/kotlin.Number#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/is-zero.html"><span>is</span><wbr></wbr><span><span>Zero()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-0-7" pageId="Kotlin Gems Docs::number//toDigits/kotlin.Int#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-8" pageId="Kotlin Gems Docs::number//toDigits/kotlin.Int#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/number/to-digits.html"><span>to</span><wbr></wbr><span><span>Digits()</span></span></a></div>
     </div>
   </div>
-  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1" pageId="Kotlin Gems Docs::object////PointingToDeclaration//769193423">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-1&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/object/index.html"><span><span>object</span></span></a></div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1-0" pageId="Kotlin Gems Docs::object//isNotNull/kotlin.Any?#/PointingToDeclaration//769193423">
+  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-3" pageId="Kotlin Gems Docs::object////PointingToDeclaration//769193423">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-3&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/object/index.html"><span><span>object</span></span></a></div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-3-0" pageId="Kotlin Gems Docs::object//isNotNull/kotlin.Any?#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/object/is-not-null.html"><span>is</span><wbr></wbr><span>Not</span><wbr></wbr><span><span>Null()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-1-1" pageId="Kotlin Gems Docs::object//isNull/kotlin.Any?#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-3-1" pageId="Kotlin Gems Docs::object//isNull/kotlin.Any?#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/object/is-null.html"><span>is</span><wbr></wbr><span><span>Null()</span></span></a></div>
     </div>
   </div>
-  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2" pageId="Kotlin Gems Docs::text////PointingToDeclaration//769193423">
-    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-2&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/text/index.html"><span><span>text</span></span></a></div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-0" pageId="Kotlin Gems Docs::text//capitalized/kotlin.String#/PointingToDeclaration//769193423">
+  <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4" pageId="Kotlin Gems Docs::text////PointingToDeclaration//769193423">
+    <div class="overview"><span class="navButton" onclick="document.getElementById(&quot;Kotlin Gems Docs-nav-submenu-4&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="-kotlin -gems -docs/text/index.html"><span><span>text</span></span></a></div>
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-0" pageId="Kotlin Gems Docs::text//capitalized/kotlin.String#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/capitalized.html"><span><span>capitalized()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-1" pageId="Kotlin Gems Docs::text//count/kotlin.String#kotlin.String/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-1" pageId="Kotlin Gems Docs::text//count/kotlin.String#kotlin.String/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/count.html"><span><span>count()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-2" pageId="Kotlin Gems Docs::text//delete/kotlin.String#kotlin.Array[kotlin.String]/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-2" pageId="Kotlin Gems Docs::text//delete/kotlin.String#kotlin.Array[kotlin.String]/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/delete.html"><span><span>delete()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-3" pageId="Kotlin Gems Docs::text//get/kotlin.String#kotlin.collections.Iterable[kotlin.Int]/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-3" pageId="Kotlin Gems Docs::text//get/kotlin.String#kotlin.collections.Iterable[kotlin.Int]/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/get.html"><span><span>get()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-4" pageId="Kotlin Gems Docs::text//insert/kotlin.String#kotlin.Int#kotlin.String/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-4" pageId="Kotlin Gems Docs::text//insert/kotlin.String#kotlin.Int#kotlin.String/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/insert.html"><span><span>insert()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-5" pageId="Kotlin Gems Docs::text//swapcase/kotlin.String#/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-5" pageId="Kotlin Gems Docs::text//swapcase/kotlin.String#/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/swapcase.html"><span><span>swapcase()</span></span></a></div>
     </div>
-    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-2-6" pageId="Kotlin Gems Docs::text//times/kotlin.String#kotlin.Int/PointingToDeclaration//769193423">
+    <div class="sideMenuPart" id="Kotlin Gems Docs-nav-submenu-4-6" pageId="Kotlin Gems Docs::text//times/kotlin.String#kotlin.Int/PointingToDeclaration//769193423">
       <div class="overview"><a href="-kotlin -gems -docs/text/times.html"><span><span>times()</span></span></a></div>
     </div>
   </div>
