--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@ if(savedDarkMode === true){
             <h1 class="cover"><span><span>Kotlin</span></span> <span><span>Gems</span></span> <span><span>Docs</span></span></h1>
           </div>
           <h2 class="">Packages</h2>
-          <div class="table"><a data-name="1050376939%2FPackages%2F769193423" anchor-label="number" id="1050376939%2FPackages%2F769193423" data-filterable-set=":dokkaHtml/main"></a>
+          <div class="table"><a data-name="305208832%2FPackages%2F769193423" anchor-label="collection" id="305208832%2FPackages%2F769193423" data-filterable-set=":dokkaHtml/main"></a>
+            <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
+              <div>
+                <div class="main-subrow ">
+                  <div class=""><span class="inline-flex">
+                      <div><a href="-kotlin -gems -docs/collection/index.html">collection</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="305208832%2FPackages%2F769193423"></span>
+                        <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
+                      </span></span></div>
+                  <div class="pull-right"></div>
+                </div>
+                <div></div>
+              </div>
+            </div>
+<a data-name="682812040%2FPackages%2F769193423" anchor-label="io" id="682812040%2FPackages%2F769193423" data-filterable-set=":dokkaHtml/main"></a>
+            <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
+              <div>
+                <div class="main-subrow ">
+                  <div class=""><span class="inline-flex">
+                      <div><a href="-kotlin -gems -docs/io/index.html">io</a></div>
+<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="682812040%2FPackages%2F769193423"></span>
+                        <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
+                      </span></span></div>
+                  <div class="pull-right"></div>
+                </div>
+                <div></div>
+              </div>
+            </div>
+<a data-name="1050376939%2FPackages%2F769193423" anchor-label="number" id="1050376939%2FPackages%2F769193423" data-filterable-set=":dokkaHtml/main"></a>
             <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
               <div>
                 <div class="main-subrow ">
